--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiri&display=swap');
 body {
   /* المطلوب الأول هنا */
   text-align: center;
   background-size: cover;
+  background: url("./img/KuwaitCodesWallpaper.png");
+  height: 100vh;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  font-family: 'Amiri', serif;
+
+
 }
 
 /* المطلوب الثاني هنا */
 nav {
-}
-.nav-elements {
-}
+  display: flex;
+  justify-content: space-around;
 
+  
+}
+/* a {
+  text-decoration: none;
+  color: black;
+}*/
+.nav-elements a
+{
+  color: rgba(70, 68, 216, 0.932);
+  text-decoration: none;
+  padding: 5px 20px;
+  font-size: 24px;
+}
+.nav-elements a:hover 
+{
+  background: #fff;
+  color: rgba(15, 13, 114, 0.986);;
+}
 .card {
   /* المطلوب الثالث هنا */
-  width: 400px;
+  width: 350px;
   height: 500px;
   background-color: white;
+  box-shadow: 8px 10px 10px 15px rgba(64, 120, 194, 0.89);
+  border-radius: 60px;
 }
 
 img {
@@ -22,14 +50,14 @@ img {
   width: 120px;
   height: 120px;
   margin-top: 20px;
+  box-shadow: 12px;
+  border-radius: 60px;
 }
 
-.hobbies {
-  /* المطلوب السادس هنا */
-}
 
 .center {
   margin: auto;
+
 }
 
 ul {
@@ -38,7 +66,15 @@ ul {
   display: inline-block;
 }
 
-a {
-  text-decoration: none;
-  color: black;
+.hobbies {
+  /* المطلوب السادس هنا */
+  display: flex;
+  justify-content: space-around;
+
+}
+.hobbies img:hover
+{
+  position: absolute;
+  transition: all 1s inherit;
+   opacity: 0.5;
 }
